issue #293: optizime robust.sh, using the same bash template to start a spring service (#310)